objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Notes__c</fullName>
        <label>Candidate Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Street_Address__c</fullName>
        <label>Home Street Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>WV</fullName>
                </value>
                <value>
                    <fullName>WI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>